# Qt_back_up_project_uestc

./: CMakeLists.txt  CMakePresets.json  QtBackupWindow.cpp  QtBackupWindow.h  QtBackupWindow.ui  QtMainWindow.cpp  QtMainWindow.h  QtMainWindow.ui  QtRestoreWindow.cpp  QtRestoreWindow.h  QtRestoreWindow.ui  Qt_backup.qrc  Qt_backup.ui  README.md  aesfile.cpp  aesfile.h  choose_files.cpp  choose_files.h  choose_folder.cpp  choose_folder.h  main.cpp  my_pack_and_encode.cpp  my_pack_and_encode.h  my_tar.cpp  my_tar.h
